Fix: torch -> Add CUDA support

--- a/doc/ga/fn-optimization.ipynb
+++ b/doc/ga/fn-optimization.ipynb
@@ -36,8 +36,7 @@
     "from notebook import GeneticAlgorithm, AssetType, am, torch, np, plt\n",
     "\n",
     "from dataclasses import dataclass\n",
-    "from typing import List, Tuple, Callable\n",
-    "import random"
+    "from typing import List, Tuple, Callable"
    ]
   },
   {
@@ -355,7 +354,7 @@
     }
    ],
    "source": [
-    "print(f\"\\033[92mFunction Optimization Problem\\033[0m\\n\")\n",
+    "print(\"\\033[92mFunction Optimization Problem\\033[0m\\n\")\n",
     "print(\"1. Rastrigin Function (más difícil)\")\n",
     "print(\"2. Ackley Function (dificultad media)\")\n",
     "print(\"3. Rosenbrock Function (dificultad media-alta)\")\n",
