--- a/doc/ga/knapsack.ipynb
+++ b/doc/ga/knapsack.ipynb
@@ -33,7 +33,7 @@
     "    sys.path.insert(0, str(doc_dir))\n",
     "\n",
     "# Now import everything with one line\n",
-    "from notebook import GeneticAlgorithm, AssetType, am, torch, np, plt\n",
+    "from notebook import GeneticAlgorithm, AssetType, am, torch, plt\n",
     "\n",
     "from dataclasses import dataclass"
    ]
@@ -160,7 +160,7 @@
     "weights = torch.randint(1, 10, (n_objects,), dtype=torch.float32)\n",
     "values = torch.randint(1, 15, (n_objects,), dtype=torch.float32)\n",
     "\n",
-    "print(f\"\\033[92mKnapsack Problem\\033[0m\\n\")\n",
+    "print(\"\\033[92mKnapsack Problem\\033[0m\\n\")\n",
     "print(f\"Weights: {weights.tolist()}\")\n",
     "print(f\"Values: {values.tolist()}\")\n",
     "print(f\"Maximum weight capacity: {bag_capacity}\")\n",
