--- a/doc/ga/str_matching.ipynb
+++ b/doc/ga/str_matching.ipynb
@@ -35,7 +35,7 @@
     "    sys.path.insert(0, str(doc_dir))\n",
     "\n",
     "# Now import everything with one line\n",
-    "from notebook import GeneticAlgorithm, AssetType, am, torch, np, plt\n",
+    "from notebook import GeneticAlgorithm, AssetType, am, torch, plt\n",
     "\n",
     "# Additional imports\n",
     "import string\n",
@@ -236,7 +236,7 @@
     "population_size = 100\n",
     "n_generations = 300\n",
     "\n",
-    "print(f\"\\033[92mString Matching Problem\\033[0m\\n\")\n",
+    "print(\"\\033[92mString Matching Problem\\033[0m\\n\")\n",
     "print(f\"Target string: '{target_string}'\")\n",
     "\n",
     "# Create the problem data object\n",
@@ -628,7 +628,7 @@
     "    binary=False,\n",
     ")\n",
     "\n",
-    "print(f\"\\nLonger string challenge:\")\n",
+    "print(\"\\nLonger string challenge:\")\n",
     "print(f\"Target: '{long_string}'\")\n",
     "print(\"\\nRunning genetic algorithm...\")\n",
     "\n",
