--- a/doc/ga/tsp.ipynb
+++ b/doc/ga/tsp.ipynb
@@ -450,7 +450,7 @@
     }
    ],
    "source": [
-    "print(f\"\\033[92mTraveling Salesman Problem (TSP)\\033[0m\\n\")\n",
+    "print(\"\\033[92mTraveling Salesman Problem (TSP)\\033[0m\\n\")\n",
     "\n",
     "# Crear instancia aleatoria - using fewer cities for notebook demonstration\n",
     "num_cities = 20\n",
