--- a/doc/gpu-troubleshooter.ipynb
+++ b/doc/gpu-troubleshooter.ipynb
@@ -28,10 +28,10 @@
      "output_type": "stream",
      "text": [
       "Python version: 3.12.11 (main, Jul  1 2025, 18:37:24) [Clang 20.1.4 ]\n",
-      "Platform: Linux-6.12.35-x86_64-with-glibc2.40\n",
+      "Platform: Linux-6.12.42-x86_64-with-glibc2.40\n",
       "\n",
       "PyTorch version: 2.6.0+cu124\n",
-      "CUDA available: False\n",
+      "CUDA available: True\n",
       "CUDA version (PyTorch): 12.4\n",
       "\n",
       "PyTorch build details:\n",
@@ -205,12 +205,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Issues detected with PyTorch GPU support:\n",
-      "  1. PyTorch has CUDA support, but can't access CUDA at runtime\n",
+      "Successfully created a CUDA tensor!\n",
+      "No issues detected with PyTorch GPU support\n",
       "\n",
       "Checking if CUDA is generally available on your system...\n",
       "CUDA is available on your system! nvidia-smi output:\n",
-      "Wed Aug 20 22:43:07 2025       \n",
+      "Thu Aug 21 19:48:39 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 570.153.02             Driver Version: 570.153.02     CUDA Version: 12.8     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -219,7 +219,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 4060 ...    Off |   00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   57C    P8              1W /   80W |      12MiB /   8188MiB |      0%      Default |\n"
+      "| N/A   52C    P3              4W /   55W |     126MiB /   8188MiB |      0%      Default |\n"
      ]
     }
    ],
@@ -324,7 +324,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_461640/1464567873.py:12: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "/tmp/ipykernel_32697/1464567873.py:12: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
       "  import pkg_resources\n"
      ]
     }
@@ -351,9 +351,9 @@
     "\n",
     "        # Try to determine if this was installed with CUDA support\n",
     "        if hasattr(torch.version, \"cuda\") and torch.version.cuda:\n",
-    "            print(f\"This appears to be a CUDA-enabled build of PyTorch\")\n",
+    "            print(\"This appears to be a CUDA-enabled build of PyTorch\")\n",
     "        else:\n",
-    "            print(f\"This appears to be a CPU-only build of PyTorch\")\n",
+    "            print(\"This appears to be a CPU-only build of PyTorch\")\n",
     "\n",
     "    except ImportError:\n",
     "        print(\"PyTorch is not installed\")\n",
@@ -557,17 +557,18 @@
       "\n",
       "CUDA-related environment variables:\n",
       "NIX_LD_LIBRARY_PATH: /run/current-system/sw/share/nix-ld/lib\n",
-      "PKG_CONFIG_PATH: /nix/store/n7abw5wmqn1acq0399hzinl625r34vn8-systemd-257.6-dev/lib/pkgconfig:/nix/store/d667kdfbfn17905f7kmdl33r9gvwzaji-pkg-config-wrapper-0.29.2/lib/pkgconfig:/nix/store/yw5xqn8lqinrifm9ij80nrmf0i6fdcbx-alsa-lib-1.2.13/lib/pkgconfig:/nix/store/3ybnl9nq86s7jz0i8pzqlrabjgdxzrjz-glib-2.84.3-bin/lib/pkgconfig:/nix/store/7227amwg7k4sbl6mhglq17v5x5ki54ks-libglvnd-1.7.0/lib/pkgconfig:/nix/store/sisfq9wihyqqjzmrpik9b4xksifw97ha-libxkbcommon-1.8.1/lib/pkgconfig:/nix/store/az1wz2fh6y0j0simjsl2b58ksyrjdf71-sdl2-compat-2.32.56/lib/pkgconfig:/nix/store/2snalm100yr5g8fdpfn83qq8nga2g3hh-SDL2_gfx-1.0.4/lib/pkgconfig:/nix/store/zvhv6diykls92mxg2l3x1jbh72hiy81b-SDL2_image-2.8.8/lib/pkgconfig:/nix/store/fx0lxaimqlgncfc6jinahgrih4rfdvzs-SDL2_mixer-2.8.1/lib/pkgconfig:/nix/store/3n6m0alsrc0ajn9bdmbrqhm6dnlbfhmd-SDL2_ttf-2.24.0/lib/pkgconfig:/nix/store/60lzwimi95ls10zwqxpb6ngzax1z7s9a-wayland-1.23.1/lib/pkgconfig:/nix/store/1nsvsrqp5zm96r9p3rrq3yhlyw8jiy91-libX11-1.8.12/lib/pkgconfig:/nix/store/b41hqc61539rrkhzfywxm8bw2j31dadc-libXcursor-1.2.3/lib/pkgconfig:/nix/store/58dzwlbfldrsnwah1q3cfaqrx98jajpp-libXi-1.8.2/lib/pkgconfig:/nix/store/nwycj4y8brrzk3h8ikw4axqni3bfma5w-libXinerama-1.1.5/lib/pkgconfig:/nix/store/5fcbi2lycw2hz7rbn3nl5nrhhk2ki8dd-libXrandr-1.5.4/lib/pkgconfig:/nix/store/i8ls8rz7c56ipdqwkr3c1lcpr30kh77m-fontconfig-2.16.0-bin/lib/pkgconfig:/nix/store/yw429hvy80x2hg00lsfdfhkkib7gz54g-freetype-2.13.3/lib/pkgconfig:/nix/store/pcm23dq8n6vj89kxzykw4gq9wbh5w7b4-qtbase-6.9.1/lib/pkgconfig:/nix/store/s8xcn83hvd4ljm3fr0k1y397hhd4n5fm-qtwayland-6.9.1/lib/pkgconfig:/nix/store/lrrj9h7h1ifbdv82rrbddxracm5jjxwx-libjpeg-turbo-3.0.4-bin/lib/pkgconfig:/nix/store/4i49f869yc93c77m0y1lmpnvlzip5pgr-libpng-apng-1.6.46/lib/pkgconfig:/nix/store/l4mhds1994iaa7s7k8a782qra2yipv5b-giflib-5.2.2/lib/pkgconfig\n",
+      "PKG_CONFIG_PATH: /nix/store/kjy6rmnnz59pr2qcq1cal6f7xhq5r3r4-systemd-257.7-dev/lib/pkgconfig:/nix/store/284df5f5mq01h1wmsz9grrqzraa3r9vi-pkg-config-wrapper-0.29.2/lib/pkgconfig:/nix/store/d9fjwvp63xpfd9rw86lmcc2bhfky1ryc-alsa-lib-1.2.13/lib/pkgconfig:/nix/store/h55b1h2kr5pl68fhwp9b6qs3xfqj3hs6-glib-2.84.3-bin/lib/pkgconfig:/nix/store/qbnwpvvwnxw73m0pbj20hkv9ypv3ncnq-libglvnd-1.7.0/lib/pkgconfig:/nix/store/rx7src7js0g617rs6yi76vssm58dg67k-libxkbcommon-1.8.1/lib/pkgconfig:/nix/store/hyxzbk63w6al5iw7mywhgbm53nk3x8yw-sdl2-compat-2.32.56/lib/pkgconfig:/nix/store/5lwlj9mgc16zjs7r9lk4h2vpqjylc0jr-SDL2_gfx-1.0.4/lib/pkgconfig:/nix/store/slpn8nb5q40lr2jzq175lyszfh2vnbqx-SDL2_image-2.8.8/lib/pkgconfig:/nix/store/99xi2p0xzfj2f4j88qmk086va7vhlmb5-SDL2_mixer-2.8.1/lib/pkgconfig:/nix/store/r0fa63cr2hac6pd1czrg0pbs2c7wlhpy-SDL2_ttf-2.24.0/lib/pkgconfig:/nix/store/r9fbwnccm8gahy0h3b6g8n8k755k1vlk-wayland-1.23.1/lib/pkgconfig:/nix/store/rbmbqk2865y79ncrngf575a72dpjf8dy-libX11-1.8.12/lib/pkgconfig:/nix/store/10mjznxpmsjskgvfcdq5nrc9m97fas11-libXcursor-1.2.3/lib/pkgconfig:/nix/store/bia2jm6jyalmmbw4kjljqvqydjnm929c-libXi-1.8.2/lib/pkgconfig:/nix/store/ykabdv433705wa5h9niqwp3z2w9z0ib2-libXinerama-1.1.5/lib/pkgconfig:/nix/store/hv3zdr3xrxlld11j5xkdlrdmcr5wn4n2-libXrandr-1.5.4/lib/pkgconfig:/nix/store/w2i53qwmiqy1ij268dihai58c118vyva-fontconfig-2.16.0-bin/lib/pkgconfig:/nix/store/qv94wfmwj25z2i0sg7icq1zh3w3gdczv-freetype-2.13.3/lib/pkgconfig:/nix/store/40djrmhgpd2vcbiikcmzrg5rjjv8igsp-qtbase-6.9.1/lib/pkgconfig:/nix/store/nag6qscz6kd5fg61rxb39y2kik375msx-qtwayland-6.9.1/lib/pkgconfig:/nix/store/1rsln2xb1c2h69w47dip5djcncx2h8jj-libjpeg-turbo-3.0.4-bin/lib/pkgconfig:/nix/store/gshwzbmpd5nj1k0k2wz1xck36z6ih1bm-libpng-apng-1.6.46/lib/pkgconfig:/nix/store/k89rwqkg52wiwdkjdnii28hzkbkygmaq-giflib-5.2.2/lib/pkgconfig\n",
       "XCURSOR_PATH: /home/yrrrrrf/.icons:/home/yrrrrrf/.local/share/icons:/home/yrrrrrf/.nix-profile/share/icons:/home/yrrrrrf/.nix-profile/share/pixmaps:/nix/profile/share/icons:/nix/profile/share/pixmaps:/home/yrrrrrf/.local/state/nix/profile/share/icons:/home/yrrrrrf/.local/state/nix/profile/share/pixmaps:/etc/profiles/per-user/yrrrrrf/share/icons:/etc/profiles/per-user/yrrrrrf/share/pixmaps:/nix/var/nix/profiles/default/share/icons:/nix/var/nix/profiles/default/share/pixmaps:/run/current-system/sw/share/icons:/run/current-system/sw/share/pixmaps\n",
       "NIX_PATH: nixpkgs=/nix/var/nix/profiles/per-user/root/channels/nixos:nixos-config=/etc/nixos/configuration.nix:/nix/var/nix/profiles/per-user/root/channels\n",
       "VSCODE_CODE_CACHE_PATH: /home/yrrrrrf/.config/Code - Insiders/CachedData/2c749892adf66679e282a1b27ae526cf995d6f0c\n",
       "INFOPATH: /home/yrrrrrf/.nix-profile/info:/home/yrrrrrf/.nix-profile/share/info:/nix/profile/info:/nix/profile/share/info:/home/yrrrrrf/.local/state/nix/profile/info:/home/yrrrrrf/.local/state/nix/profile/share/info:/etc/profiles/per-user/yrrrrrf/info:/etc/profiles/per-user/yrrrrrf/share/info:/nix/var/nix/profiles/default/info:/nix/var/nix/profiles/default/share/info:/run/current-system/sw/info:/run/current-system/sw/share/info\n",
       "GTK_PATH: /home/yrrrrrf/.nix-profile/lib/gtk-2.0:/home/yrrrrrf/.nix-profile/lib/gtk-3.0:/home/yrrrrrf/.nix-profile/lib/gtk-4.0:/nix/profile/lib/gtk-2.0:/nix/profile/lib/gtk-3.0:/nix/profile/lib/gtk-4.0:/home/yrrrrrf/.local/state/nix/profile/lib/gtk-2.0:/home/yrrrrrf/.local/state/nix/profile/lib/gtk-3.0:/home/yrrrrrf/.local/state/nix/profile/lib/gtk-4.0:/etc/profiles/per-user/yrrrrrf/lib/gtk-2.0:/etc/profiles/per-user/yrrrrrf/lib/gtk-3.0:/etc/profiles/per-user/yrrrrrf/lib/gtk-4.0:/nix/var/nix/profiles/default/lib/gtk-2.0:/nix/var/nix/profiles/default/lib/gtk-3.0:/nix/var/nix/profiles/default/lib/gtk-4.0:/run/current-system/sw/lib/gtk-2.0:/run/current-system/sw/lib/gtk-3.0:/run/current-system/sw/lib/gtk-4.0\n",
       "QTWEBKIT_PLUGIN_PATH: /home/yrrrrrf/.nix-profile/lib/mozilla/plugins/:/nix/profile/lib/mozilla/plugins/:/home/yrrrrrf/.local/state/nix/profile/lib/mozilla/plugins/:/etc/profiles/per-user/yrrrrrf/lib/mozilla/plugins/:/nix/var/nix/profiles/default/lib/mozilla/plugins/:/run/current-system/sw/lib/mozilla/plugins/\n",
-      "LD_LIBRARY_PATH: /nix/store/skrisksfpp0da0yg896bs9j43wq5rks2-libdbusmenu-glib-16.04.0/lib:/nix/store/n7abw5wmqn1acq0399hzinl625r34vn8-systemd-257.6-dev/lib:/nix/store/d667kdfbfn17905f7kmdl33r9gvwzaji-pkg-config-wrapper-0.29.2/lib:/nix/store/yw5xqn8lqinrifm9ij80nrmf0i6fdcbx-alsa-lib-1.2.13/lib:/nix/store/y3nxdc2x8hwivppzgx5hkrhacsh87l21-glib-2.84.3/lib:/nix/store/7227amwg7k4sbl6mhglq17v5x5ki54ks-libglvnd-1.7.0/lib:/nix/store/sisfq9wihyqqjzmrpik9b4xksifw97ha-libxkbcommon-1.8.1/lib:/nix/store/az1wz2fh6y0j0simjsl2b58ksyrjdf71-sdl2-compat-2.32.56/lib:/nix/store/2snalm100yr5g8fdpfn83qq8nga2g3hh-SDL2_gfx-1.0.4/lib:/nix/store/zvhv6diykls92mxg2l3x1jbh72hiy81b-SDL2_image-2.8.8/lib:/nix/store/fx0lxaimqlgncfc6jinahgrih4rfdvzs-SDL2_mixer-2.8.1/lib:/nix/store/3n6m0alsrc0ajn9bdmbrqhm6dnlbfhmd-SDL2_ttf-2.24.0/lib:/nix/store/60lzwimi95ls10zwqxpb6ngzax1z7s9a-wayland-1.23.1/lib:/nix/store/1nsvsrqp5zm96r9p3rrq3yhlyw8jiy91-libX11-1.8.12/lib:/nix/store/b41hqc61539rrkhzfywxm8bw2j31dadc-libXcursor-1.2.3/lib:/nix/store/58dzwlbfldrsnwah1q3cfaqrx98jajpp-libXi-1.8.2/lib:/nix/store/nwycj4y8brrzk3h8ikw4axqni3bfma5w-libXinerama-1.1.5/lib:/nix/store/5fcbi2lycw2hz7rbn3nl5nrhhk2ki8dd-libXrandr-1.5.4/lib:/nix/store/nm07kfl411ig0yv61rvginj665b6c0ms-fontconfig-2.16.0-lib/lib:/nix/store/yw429hvy80x2hg00lsfdfhkkib7gz54g-freetype-2.13.3/lib:/nix/store/pcm23dq8n6vj89kxzykw4gq9wbh5w7b4-qtbase-6.9.1/lib:/nix/store/s8xcn83hvd4ljm3fr0k1y397hhd4n5fm-qtwayland-6.9.1/lib:/nix/store/yvdmi1gvqjjil5ihka8qs9wrr92gns9j-libjpeg-turbo-3.0.4/lib:/nix/store/4i49f869yc93c77m0y1lmpnvlzip5pgr-libpng-apng-1.6.46/lib:/nix/store/l4mhds1994iaa7s7k8a782qra2yipv5b-giflib-5.2.2/lib\n",
+      "LD_LIBRARY_PATH: /nix/store/7sn7h422qps1y3f5b7490vn3yk18afky-libdbusmenu-glib-16.04.0/lib:/nix/store/kjy6rmnnz59pr2qcq1cal6f7xhq5r3r4-systemd-257.7-dev/lib:/nix/store/284df5f5mq01h1wmsz9grrqzraa3r9vi-pkg-config-wrapper-0.29.2/lib:/nix/store/d9fjwvp63xpfd9rw86lmcc2bhfky1ryc-alsa-lib-1.2.13/lib:/nix/store/v6frc7a2qy44rj398icysksynnbwxwf8-glib-2.84.3/lib:/nix/store/qbnwpvvwnxw73m0pbj20hkv9ypv3ncnq-libglvnd-1.7.0/lib:/nix/store/rx7src7js0g617rs6yi76vssm58dg67k-libxkbcommon-1.8.1/lib:/nix/store/hyxzbk63w6al5iw7mywhgbm53nk3x8yw-sdl2-compat-2.32.56/lib:/nix/store/5lwlj9mgc16zjs7r9lk4h2vpqjylc0jr-SDL2_gfx-1.0.4/lib:/nix/store/slpn8nb5q40lr2jzq175lyszfh2vnbqx-SDL2_image-2.8.8/lib:/nix/store/99xi2p0xzfj2f4j88qmk086va7vhlmb5-SDL2_mixer-2.8.1/lib:/nix/store/r0fa63cr2hac6pd1czrg0pbs2c7wlhpy-SDL2_ttf-2.24.0/lib:/nix/store/r9fbwnccm8gahy0h3b6g8n8k755k1vlk-wayland-1.23.1/lib:/nix/store/rbmbqk2865y79ncrngf575a72dpjf8dy-libX11-1.8.12/lib:/nix/store/10mjznxpmsjskgvfcdq5nrc9m97fas11-libXcursor-1.2.3/lib:/nix/store/bia2jm6jyalmmbw4kjljqvqydjnm929c-libXi-1.8.2/lib:/nix/store/ykabdv433705wa5h9niqwp3z2w9z0ib2-libXinerama-1.1.5/lib:/nix/store/hv3zdr3xrxlld11j5xkdlrdmcr5wn4n2-libXrandr-1.5.4/lib:/nix/store/hs37j1v4xhh4pn6dl6bvshc74bhan938-fontconfig-2.16.0-lib/lib:/nix/store/qv94wfmwj25z2i0sg7icq1zh3w3gdczv-freetype-2.13.3/lib:/nix/store/40djrmhgpd2vcbiikcmzrg5rjjv8igsp-qtbase-6.9.1/lib:/nix/store/nag6qscz6kd5fg61rxb39y2kik375msx-qtwayland-6.9.1/lib:/nix/store/4bkihvnmzbc44zspzlir5kkb0mzb6j8w-libjpeg-turbo-3.0.4/lib:/nix/store/gshwzbmpd5nj1k0k2wz1xck36z6ih1bm-libpng-apng-1.6.46/lib:/nix/store/k89rwqkg52wiwdkjdnii28hzkbkygmaq-giflib-5.2.2/lib\n",
       "LIBEXEC_PATH: /home/yrrrrrf/.nix-profile/libexec:/nix/profile/libexec:/home/yrrrrrf/.local/state/nix/profile/libexec:/etc/profiles/per-user/yrrrrrf/libexec:/nix/var/nix/profiles/default/libexec:/run/current-system/sw/libexec\n",
-      "PATH: /home/yrrrrrf/Documents/Lab/ai/.venv/bin:/nix/store/3ybnl9nq86s7jz0i8pzqlrabjgdxzrjz-glib-2.84.3-bin/bin:/home/yrrrrrf/.local/bin:/run/wrappers/bin:/home/yrrrrrf/.nix-profile/bin:/nix/profile/bin:/home/yrrrrrf/.local/state/nix/profile/bin:/etc/profiles/per-user/yrrrrrf/bin:/nix/var/nix/profiles/default/bin:/run/current-system/sw/bin:/nix/store/2gkh9v7wrzjq6ws312c6z6ajwnjvwcmb-binutils-wrapper-2.44/bin:/nix/store/xizrx0pmgjbsx6miwk352nf77jw2rb60-hyprland-qtutils-0.1.4/bin:/nix/store/7gspl5402q53m36mavbq3rxxlh70kqfv-pciutils-3.13.0/bin:/nix/store/9aanvmg69mvcs192ikk7rvs3gw1rgy37-pkgconf-wrapper-2.4.3/bin\n",
-      "JUPYTER_PATH: /home/yrrrrrf/.config/Code - Insiders/User/globalStorage/ms-toolsai.jupyter/version-2025.7.0/jupyter\n"
+      "PATH: /home/yrrrrrf/Documents/Lab/ai/.venv/bin:/nix/store/h55b1h2kr5pl68fhwp9b6qs3xfqj3hs6-glib-2.84.3-bin/bin:/home/yrrrrrf/.local/bin:/run/wrappers/bin:/home/yrrrrrf/.nix-profile/bin:/nix/profile/bin:/home/yrrrrrf/.local/state/nix/profile/bin:/etc/profiles/per-user/yrrrrrf/bin:/nix/var/nix/profiles/default/bin:/run/current-system/sw/bin:/nix/store/87zpmcmwvn48z4lbrfba74b312h22s6c-binutils-wrapper-2.44/bin:/nix/store/14gqnn5rwjv5a6b8vpkskb37kgv373jy-hyprland-qtutils-0.1.4/bin:/nix/store/kh6s3i1k5hmhimzinvb77gynm7z0cpjs-pciutils-3.13.0/bin:/nix/store/m53q460bmkxmnwk52jknjsw49kgc1y81-pkgconf-wrapper-2.4.3/bin\n",
+      "JUPYTER_PATH: /home/yrrrrrf/.config/Code - Insiders/User/globalStorage/ms-toolsai.jupyter/version-2025.7.0/jupyter\n",
+      "CUDA_MODULE_LOADING: LAZY\n"
      ]
     },
     {
@@ -622,13 +623,13 @@
       "Testing PyTorch CPU performance...\n",
       "\n",
       "Matrix multiplication with size 1000x1000\n",
-      "Time taken: 0.0103 seconds\n",
+      "Time taken: 0.0043 seconds\n",
       "\n",
       "Matrix multiplication with size 2000x2000\n",
-      "Time taken: 0.0487 seconds\n",
+      "Time taken: 0.0253 seconds\n",
       "\n",
       "Matrix multiplication with size 4000x4000\n",
-      "Time taken: 0.2271 seconds\n"
+      "Time taken: 0.2016 seconds\n"
      ]
     }
    ],
@@ -690,7 +691,7 @@
       "================================================================================\n",
       "\n",
       "System:\n",
-      "  Operating System: Linux 6.12.35\n",
+      "  Operating System: Linux 6.12.42\n",
       "  Architecture: x86_64\n",
       "  Python: 3.12.11\n",
       "\n",
@@ -698,7 +699,7 @@
       "  Version: 2.6.0+cu124\n",
       "  CUDA Support: Yes\n",
       "  CUDA Version: 12.4\n",
-      "  CUDA Available at Runtime: No\n",
+      "  CUDA Available at Runtime: Yes\n",
       "\n",
       "GPU:\n",
       "  NVIDIA GPU: None detected\n",
