--- a/doc/system-bench.ipynb
+++ b/doc/system-bench.ipynb
@@ -20,8 +20,6 @@
     "import sys\n",
     "import platform\n",
     "import subprocess\n",
-    "from datetime import datetime\n",
-    "import timeit\n",
     "\n",
     "# Advanced PyTorch Benchmark with robust visualization\n",
     "import torch\n",
@@ -31,10 +29,6 @@
     "import seaborn as sns\n",
     "\n",
     "# Import PyTorch for benchmarking\n",
-    "import torch\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
     "# Set seaborn style for prettier plots\n",
     "sns.set_style(\"darkgrid\")\n",
@@ -149,7 +143,7 @@
     "            .split(\"\\n\")[1]\n",
     "        )\n",
     "        print_info(\"CPU Model\", result)\n",
-    "except Exception as e:\n",
+    "except Exception:\n",
     "    pass  # Fall back to the basic information if this fails\n",
     "\n",
     "# Python information\n",
@@ -195,7 +189,7 @@
     "        mem_bytes = os.sysconf(\"SC_PHYS_PAGES\") * os.sysconf(\"SC_PAGE_SIZE\")\n",
     "        mem_gib = mem_bytes / (1024.0**3)\n",
     "        print_info(\"System RAM\", f\"{mem_gib:.2f} GiB\")\n",
-    "except Exception as e:\n",
+    "except Exception:\n",
     "    print_info(\"System RAM\", \"Could not detect\")"
    ]
   },
