--- a/doc/some-notebook.ipynb
+++ b/doc/some-notebook.ipynb
@@ -31,8 +31,7 @@
     "if str(doc_dir) not in sys.path:\n",
     "    sys.path.insert(0, str(doc_dir))\n",
     "\n",
-    "# Now import everything with one line\n",
-    "from notebook import AssetType, am"
+    "# Now import everything with one line"
    ]
   }
  ],
