--- a/doc/gpu-troubleshooter.ipynb
+++ b/doc/gpu-troubleshooter.ipynb
@@ -210,7 +210,7 @@
       "\n",
       "Checking if CUDA is generally available on your system...\n",
       "CUDA is available on your system! nvidia-smi output:\n",
-      "Thu Aug 21 19:48:39 2025       \n",
+      "Tue Aug 26 10:40:58 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 570.153.02             Driver Version: 570.153.02     CUDA Version: 12.8     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -219,7 +219,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 4060 ...    Off |   00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   52C    P3              4W /   55W |     126MiB /   8188MiB |      0%      Default |\n"
+      "| N/A   59C    P0              2W /   80W |     126MiB /   8188MiB |      2%      Default |\n"
      ]
     }
    ],
@@ -314,9 +314,9 @@
      "output_type": "stream",
      "text": [
       "Checking PyTorch installation details...\n",
-      "PyTorch is installed at: /home/yrrrrrf/Documents/Lab/ai/.venv/lib/python3.12/site-packages/torch/__init__.py\n",
+      "PyTorch is installed at: /home/yrrrrrf/lab/ai/.venv/lib/python3.12/site-packages/torch/__init__.py\n",
       "PyTorch package version: 2.6.0+cu124\n",
-      "Package location: /home/yrrrrrf/Documents/Lab/ai/.venv/lib/python3.12/site-packages\n",
+      "Package location: /home/yrrrrrf/lab/ai/.venv/lib/python3.12/site-packages\n",
       "This appears to be a CUDA-enabled build of PyTorch\n"
      ]
     },
@@ -324,7 +324,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_32697/1464567873.py:12: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "/tmp/ipykernel_13052/2696102152.py:12: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
       "  import pkg_resources\n"
      ]
     }
@@ -548,12 +548,12 @@
      "text": [
       "Collecting detailed system information for debugging...\n",
       "\n",
-      "Python executable: /home/yrrrrrf/Documents/Lab/ai/.venv/bin/python\n",
+      "Python executable: /home/yrrrrrf/lab/ai/.venv/bin/python\n",
       "Python version: 3.12.11 (main, Jul  1 2025, 18:37:24) [Clang 20.1.4 ]\n",
-      "Python path: ['/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python312.zip', '/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python3.12', '/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python3.12/lib-dynload', '', '/home/yrrrrrf/Documents/Lab/ai/.venv/lib/python3.12/site-packages', '/home/yrrrrrf/Documents/Lab/ai/.venv/lib/python3.12/site-packages/setuptools/_vendor']\n",
+      "Python path: ['/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python312.zip', '/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python3.12', '/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python3.12/lib-dynload', '', '/home/yrrrrrf/lab/ai/.venv/lib/python3.12/site-packages', '/home/yrrrrrf/lab/ai/.venv/lib/python3.12/site-packages/setuptools/_vendor']\n",
       "\n",
       "Installed packages:\n",
-      "Error getting pip list: Command '['/home/yrrrrrf/Documents/Lab/ai/.venv/bin/python', '-m', 'pip', 'list']' returned non-zero exit status 1.\n",
+      "Error getting pip list: Command '['/home/yrrrrrf/lab/ai/.venv/bin/python', '-m', 'pip', 'list']' returned non-zero exit status 1.\n",
       "\n",
       "CUDA-related environment variables:\n",
       "NIX_LD_LIBRARY_PATH: /run/current-system/sw/share/nix-ld/lib\n",
@@ -566,7 +566,7 @@
       "QTWEBKIT_PLUGIN_PATH: /home/yrrrrrf/.nix-profile/lib/mozilla/plugins/:/nix/profile/lib/mozilla/plugins/:/home/yrrrrrf/.local/state/nix/profile/lib/mozilla/plugins/:/etc/profiles/per-user/yrrrrrf/lib/mozilla/plugins/:/nix/var/nix/profiles/default/lib/mozilla/plugins/:/run/current-system/sw/lib/mozilla/plugins/\n",
       "LD_LIBRARY_PATH: /nix/store/7sn7h422qps1y3f5b7490vn3yk18afky-libdbusmenu-glib-16.04.0/lib:/nix/store/kjy6rmnnz59pr2qcq1cal6f7xhq5r3r4-systemd-257.7-dev/lib:/nix/store/284df5f5mq01h1wmsz9grrqzraa3r9vi-pkg-config-wrapper-0.29.2/lib:/nix/store/d9fjwvp63xpfd9rw86lmcc2bhfky1ryc-alsa-lib-1.2.13/lib:/nix/store/v6frc7a2qy44rj398icysksynnbwxwf8-glib-2.84.3/lib:/nix/store/qbnwpvvwnxw73m0pbj20hkv9ypv3ncnq-libglvnd-1.7.0/lib:/nix/store/rx7src7js0g617rs6yi76vssm58dg67k-libxkbcommon-1.8.1/lib:/nix/store/hyxzbk63w6al5iw7mywhgbm53nk3x8yw-sdl2-compat-2.32.56/lib:/nix/store/5lwlj9mgc16zjs7r9lk4h2vpqjylc0jr-SDL2_gfx-1.0.4/lib:/nix/store/slpn8nb5q40lr2jzq175lyszfh2vnbqx-SDL2_image-2.8.8/lib:/nix/store/99xi2p0xzfj2f4j88qmk086va7vhlmb5-SDL2_mixer-2.8.1/lib:/nix/store/r0fa63cr2hac6pd1czrg0pbs2c7wlhpy-SDL2_ttf-2.24.0/lib:/nix/store/r9fbwnccm8gahy0h3b6g8n8k755k1vlk-wayland-1.23.1/lib:/nix/store/rbmbqk2865y79ncrngf575a72dpjf8dy-libX11-1.8.12/lib:/nix/store/10mjznxpmsjskgvfcdq5nrc9m97fas11-libXcursor-1.2.3/lib:/nix/store/bia2jm6jyalmmbw4kjljqvqydjnm929c-libXi-1.8.2/lib:/nix/store/ykabdv433705wa5h9niqwp3z2w9z0ib2-libXinerama-1.1.5/lib:/nix/store/hv3zdr3xrxlld11j5xkdlrdmcr5wn4n2-libXrandr-1.5.4/lib:/nix/store/hs37j1v4xhh4pn6dl6bvshc74bhan938-fontconfig-2.16.0-lib/lib:/nix/store/qv94wfmwj25z2i0sg7icq1zh3w3gdczv-freetype-2.13.3/lib:/nix/store/40djrmhgpd2vcbiikcmzrg5rjjv8igsp-qtbase-6.9.1/lib:/nix/store/nag6qscz6kd5fg61rxb39y2kik375msx-qtwayland-6.9.1/lib:/nix/store/4bkihvnmzbc44zspzlir5kkb0mzb6j8w-libjpeg-turbo-3.0.4/lib:/nix/store/gshwzbmpd5nj1k0k2wz1xck36z6ih1bm-libpng-apng-1.6.46/lib:/nix/store/k89rwqkg52wiwdkjdnii28hzkbkygmaq-giflib-5.2.2/lib\n",
       "LIBEXEC_PATH: /home/yrrrrrf/.nix-profile/libexec:/nix/profile/libexec:/home/yrrrrrf/.local/state/nix/profile/libexec:/etc/profiles/per-user/yrrrrrf/libexec:/nix/var/nix/profiles/default/libexec:/run/current-system/sw/libexec\n",
-      "PATH: /home/yrrrrrf/Documents/Lab/ai/.venv/bin:/nix/store/h55b1h2kr5pl68fhwp9b6qs3xfqj3hs6-glib-2.84.3-bin/bin:/home/yrrrrrf/.local/bin:/run/wrappers/bin:/home/yrrrrrf/.nix-profile/bin:/nix/profile/bin:/home/yrrrrrf/.local/state/nix/profile/bin:/etc/profiles/per-user/yrrrrrf/bin:/nix/var/nix/profiles/default/bin:/run/current-system/sw/bin:/nix/store/87zpmcmwvn48z4lbrfba74b312h22s6c-binutils-wrapper-2.44/bin:/nix/store/14gqnn5rwjv5a6b8vpkskb37kgv373jy-hyprland-qtutils-0.1.4/bin:/nix/store/kh6s3i1k5hmhimzinvb77gynm7z0cpjs-pciutils-3.13.0/bin:/nix/store/m53q460bmkxmnwk52jknjsw49kgc1y81-pkgconf-wrapper-2.4.3/bin\n",
+      "PATH: /home/yrrrrrf/lab/ai/.venv/bin:/nix/store/h55b1h2kr5pl68fhwp9b6qs3xfqj3hs6-glib-2.84.3-bin/bin:/home/yrrrrrf/.local/bin:/run/wrappers/bin:/home/yrrrrrf/.nix-profile/bin:/nix/profile/bin:/home/yrrrrrf/.local/state/nix/profile/bin:/etc/profiles/per-user/yrrrrrf/bin:/nix/var/nix/profiles/default/bin:/run/current-system/sw/bin:/nix/store/87zpmcmwvn48z4lbrfba74b312h22s6c-binutils-wrapper-2.44/bin:/nix/store/14gqnn5rwjv5a6b8vpkskb37kgv373jy-hyprland-qtutils-0.1.4/bin:/nix/store/kh6s3i1k5hmhimzinvb77gynm7z0cpjs-pciutils-3.13.0/bin:/nix/store/m53q460bmkxmnwk52jknjsw49kgc1y81-pkgconf-wrapper-2.4.3/bin\n",
       "JUPYTER_PATH: /home/yrrrrrf/.config/Code - Insiders/User/globalStorage/ms-toolsai.jupyter/version-2025.7.0/jupyter\n",
       "CUDA_MODULE_LOADING: LAZY\n"
      ]
@@ -575,7 +575,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/yrrrrrf/Documents/Lab/ai/.venv/bin/python: No module named pip\n"
+      "/home/yrrrrrf/lab/ai/.venv/bin/python: No module named pip\n"
      ]
     }
    ],
@@ -623,13 +623,13 @@
       "Testing PyTorch CPU performance...\n",
       "\n",
       "Matrix multiplication with size 1000x1000\n",
-      "Time taken: 0.0043 seconds\n",
+      "Time taken: 0.0042 seconds\n",
       "\n",
       "Matrix multiplication with size 2000x2000\n",
-      "Time taken: 0.0253 seconds\n",
+      "Time taken: 0.0364 seconds\n",
       "\n",
       "Matrix multiplication with size 4000x4000\n",
-      "Time taken: 0.2016 seconds\n"
+      "Time taken: 0.2381 seconds\n"
      ]
     }
    ],
@@ -795,7 +795,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai (3.12.11)",
+   "display_name": "ai",
    "language": "python",
    "name": "python3"
   },
