--- a/doc/some-notebook.ipynb
+++ b/doc/some-notebook.ipynb
@@ -10,18 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "19324680",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[96m[INFO]\u001b[0m No seed provided, using default seed \u001b[92m42\u001b[0m. To set a new seed, call \u001b[93mset_seeds(seed=YOUR_SEED)\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add path to the central init_notebook.py file\n",
     "import sys\n",
@@ -37,7 +29,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai (3.12.11)",
+   "display_name": "ai",
    "language": "python",
    "name": "python3"
   },
