feat(system): Add GPU diagnostics and improve ingest UI
- Add a new script check_gpu.py for GPU and PyTorch diagnostics.
   - Update ingest_gh.py with a custom StatusSpinnerColumn for a better
progress display.
   - Refactor prompt tags from master-prompt to meta-prompt.
   - Update system benchmarks and GPU troubleshooter notebooks with
latest results.

--- a/doc/gpu-troubleshooter.ipynb
+++ b/doc/gpu-troubleshooter.ipynb
@@ -27,8 +27,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python version: 3.12.11 (main, Jul  1 2025, 18:37:24) [Clang 20.1.4 ]\n",
-      "Platform: Linux-6.12.42-x86_64-with-glibc2.40\n",
+      "Python version: 3.12.11 (main, Jul 11 2025, 22:43:48) [Clang 20.1.4 ]\n",
+      "Platform: Linux-6.12.48-x86_64-with-glibc2.40\n",
       "\n",
       "PyTorch version: 2.6.0+cu124\n",
       "CUDA available: True\n",
@@ -210,7 +210,7 @@
       "\n",
       "Checking if CUDA is generally available on your system...\n",
       "CUDA is available on your system! nvidia-smi output:\n",
-      "Tue Aug 26 10:40:58 2025       \n",
+      "Thu Sep 25 12:30:59 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 570.153.02             Driver Version: 570.153.02     CUDA Version: 12.8     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -219,7 +219,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 4060 ...    Off |   00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   59C    P0              2W /   80W |     126MiB /   8188MiB |      2%      Default |\n"
+      "| N/A   61C    P3              8W /   55W |     813MiB /   8188MiB |     16%      Default |\n"
      ]
     }
    ],
@@ -314,9 +314,9 @@
      "output_type": "stream",
      "text": [
       "Checking PyTorch installation details...\n",
-      "PyTorch is installed at: /home/yrrrrrf/lab/ai/.venv/lib/python3.12/site-packages/torch/__init__.py\n",
+      "PyTorch is installed at: /home/yrrrrrf/docs/lab/ai/.venv/lib/python3.12/site-packages/torch/__init__.py\n",
       "PyTorch package version: 2.6.0+cu124\n",
-      "Package location: /home/yrrrrrf/lab/ai/.venv/lib/python3.12/site-packages\n",
+      "Package location: /home/yrrrrrf/docs/lab/ai/.venv/lib/python3.12/site-packages\n",
       "This appears to be a CUDA-enabled build of PyTorch\n"
      ]
     },
@@ -324,7 +324,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13052/2696102152.py:12: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "/tmp/ipykernel_5724/2696102152.py:12: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
       "  import pkg_resources\n"
      ]
     }
@@ -548,26 +548,26 @@
      "text": [
       "Collecting detailed system information for debugging...\n",
       "\n",
-      "Python executable: /home/yrrrrrf/lab/ai/.venv/bin/python\n",
-      "Python version: 3.12.11 (main, Jul  1 2025, 18:37:24) [Clang 20.1.4 ]\n",
-      "Python path: ['/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python312.zip', '/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python3.12', '/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python3.12/lib-dynload', '', '/home/yrrrrrf/lab/ai/.venv/lib/python3.12/site-packages', '/home/yrrrrrf/lab/ai/.venv/lib/python3.12/site-packages/setuptools/_vendor']\n",
+      "Python executable: /home/yrrrrrf/docs/lab/ai/.venv/bin/python\n",
+      "Python version: 3.12.11 (main, Jul 11 2025, 22:43:48) [Clang 20.1.4 ]\n",
+      "Python path: ['/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python312.zip', '/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python3.12', '/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python3.12/lib-dynload', '', '/home/yrrrrrf/docs/lab/ai/.venv/lib/python3.12/site-packages', '/home/yrrrrrf/docs/lab/ai/.venv/lib/python3.12/site-packages/setuptools/_vendor']\n",
       "\n",
       "Installed packages:\n",
-      "Error getting pip list: Command '['/home/yrrrrrf/lab/ai/.venv/bin/python', '-m', 'pip', 'list']' returned non-zero exit status 1.\n",
+      "Error getting pip list: Command '['/home/yrrrrrf/docs/lab/ai/.venv/bin/python', '-m', 'pip', 'list']' returned non-zero exit status 1.\n",
       "\n",
       "CUDA-related environment variables:\n",
       "NIX_LD_LIBRARY_PATH: /run/current-system/sw/share/nix-ld/lib\n",
-      "PKG_CONFIG_PATH: /nix/store/kjy6rmnnz59pr2qcq1cal6f7xhq5r3r4-systemd-257.7-dev/lib/pkgconfig:/nix/store/284df5f5mq01h1wmsz9grrqzraa3r9vi-pkg-config-wrapper-0.29.2/lib/pkgconfig:/nix/store/d9fjwvp63xpfd9rw86lmcc2bhfky1ryc-alsa-lib-1.2.13/lib/pkgconfig:/nix/store/h55b1h2kr5pl68fhwp9b6qs3xfqj3hs6-glib-2.84.3-bin/lib/pkgconfig:/nix/store/qbnwpvvwnxw73m0pbj20hkv9ypv3ncnq-libglvnd-1.7.0/lib/pkgconfig:/nix/store/rx7src7js0g617rs6yi76vssm58dg67k-libxkbcommon-1.8.1/lib/pkgconfig:/nix/store/hyxzbk63w6al5iw7mywhgbm53nk3x8yw-sdl2-compat-2.32.56/lib/pkgconfig:/nix/store/5lwlj9mgc16zjs7r9lk4h2vpqjylc0jr-SDL2_gfx-1.0.4/lib/pkgconfig:/nix/store/slpn8nb5q40lr2jzq175lyszfh2vnbqx-SDL2_image-2.8.8/lib/pkgconfig:/nix/store/99xi2p0xzfj2f4j88qmk086va7vhlmb5-SDL2_mixer-2.8.1/lib/pkgconfig:/nix/store/r0fa63cr2hac6pd1czrg0pbs2c7wlhpy-SDL2_ttf-2.24.0/lib/pkgconfig:/nix/store/r9fbwnccm8gahy0h3b6g8n8k755k1vlk-wayland-1.23.1/lib/pkgconfig:/nix/store/rbmbqk2865y79ncrngf575a72dpjf8dy-libX11-1.8.12/lib/pkgconfig:/nix/store/10mjznxpmsjskgvfcdq5nrc9m97fas11-libXcursor-1.2.3/lib/pkgconfig:/nix/store/bia2jm6jyalmmbw4kjljqvqydjnm929c-libXi-1.8.2/lib/pkgconfig:/nix/store/ykabdv433705wa5h9niqwp3z2w9z0ib2-libXinerama-1.1.5/lib/pkgconfig:/nix/store/hv3zdr3xrxlld11j5xkdlrdmcr5wn4n2-libXrandr-1.5.4/lib/pkgconfig:/nix/store/w2i53qwmiqy1ij268dihai58c118vyva-fontconfig-2.16.0-bin/lib/pkgconfig:/nix/store/qv94wfmwj25z2i0sg7icq1zh3w3gdczv-freetype-2.13.3/lib/pkgconfig:/nix/store/40djrmhgpd2vcbiikcmzrg5rjjv8igsp-qtbase-6.9.1/lib/pkgconfig:/nix/store/nag6qscz6kd5fg61rxb39y2kik375msx-qtwayland-6.9.1/lib/pkgconfig:/nix/store/1rsln2xb1c2h69w47dip5djcncx2h8jj-libjpeg-turbo-3.0.4-bin/lib/pkgconfig:/nix/store/gshwzbmpd5nj1k0k2wz1xck36z6ih1bm-libpng-apng-1.6.46/lib/pkgconfig:/nix/store/k89rwqkg52wiwdkjdnii28hzkbkygmaq-giflib-5.2.2/lib/pkgconfig\n",
+      "PKG_CONFIG_PATH: /nix/store/az8d7l0d6qxj63mggb1w8ma37s1zyy7l-systemd-257.9-dev/lib/pkgconfig:/nix/store/284df5f5mq01h1wmsz9grrqzraa3r9vi-pkg-config-wrapper-0.29.2/lib/pkgconfig:/nix/store/l45smaks5jlwpz6sv9prwfwvx78p7ppq-alsa-lib-1.2.13/lib/pkgconfig:/nix/store/irmkdc4kl59sdhg5smvh0yac8h4lxgk7-glib-2.84.3-bin/lib/pkgconfig:/nix/store/45hwsgjwa6nxxb5rzz2kl68g3ikfprm6-libglvnd-1.7.0/lib/pkgconfig:/nix/store/g9hb2v6j1swy77w77ird840dq20xn136-libxkbcommon-1.8.1/lib/pkgconfig:/nix/store/bdnbmvvqsl7jw8kgnsgnf7scrxi42mis-sdl2-compat-2.32.56/lib/pkgconfig:/nix/store/n3d54sa58sfjci9arf20hkaffn6hc8wq-SDL2_gfx-1.0.4/lib/pkgconfig:/nix/store/bj9j254ml80xskmk3ngwbd45mr410y7r-SDL2_image-2.8.8/lib/pkgconfig:/nix/store/4049l0apcv6kh7nzh78n8ahk4icd61f2-SDL2_mixer-2.8.1/lib/pkgconfig:/nix/store/264gx9j467f9vnw8l4v9995a9clq4pb8-SDL2_ttf-2.24.0/lib/pkgconfig:/nix/store/rkz0izd95qp2lm8nd5vzwzghd5p04gdd-wayland-1.23.1/lib/pkgconfig:/nix/store/ayswhp8g569mhb0gbgxrvqw53hsq59mz-libX11-1.8.12/lib/pkgconfig:/nix/store/ck4f1lhzmbbrpharmzxnqzw4vfbgzkr7-libxcb-1.17.0/lib/pkgconfig:/nix/store/hkn7b9rdqky4m43mhk3pg1ind85yf8fv-libXcursor-1.2.3/lib/pkgconfig:/nix/store/phpmbvcjd7sppnbfg07g5v9xyjna9nbi-libXi-1.8.2/lib/pkgconfig:/nix/store/ksm28wdl5q73lrdmlvhvsr297lafcaj5-libXinerama-1.1.5/lib/pkgconfig:/nix/store/gvg4ibdx82jfy1alrh21pki3waxnfd88-libXrandr-1.5.4/lib/pkgconfig:/nix/store/yxg93fh1zyqybbybvq0jn5nm9jyz7bj7-fontconfig-2.16.0-bin/lib/pkgconfig:/nix/store/l1g7r8sgrc3djn0x51mpy8fz5wp3204d-freetype-2.13.3/lib/pkgconfig:/nix/store/4b0y2xmlmm7vwf7s2dh494mp5fl0wa2r-qtbase-6.9.2/lib/pkgconfig:/nix/store/bgqk36593sdn062np6bi913wv9xq9dxr-qtwayland-6.9.2/lib/pkgconfig:/nix/store/m5khpdpdl0qwlvnrwb9q6ib9m8x293hy-libjpeg-turbo-3.0.4-bin/lib/pkgconfig:/nix/store/gshwzbmpd5nj1k0k2wz1xck36z6ih1bm-libpng-apng-1.6.46/lib/pkgconfig:/nix/store/k89rwqkg52wiwdkjdnii28hzkbkygmaq-giflib-5.2.2/lib/pkgconfig\n",
       "XCURSOR_PATH: /home/yrrrrrf/.icons:/home/yrrrrrf/.local/share/icons:/home/yrrrrrf/.nix-profile/share/icons:/home/yrrrrrf/.nix-profile/share/pixmaps:/nix/profile/share/icons:/nix/profile/share/pixmaps:/home/yrrrrrf/.local/state/nix/profile/share/icons:/home/yrrrrrf/.local/state/nix/profile/share/pixmaps:/etc/profiles/per-user/yrrrrrf/share/icons:/etc/profiles/per-user/yrrrrrf/share/pixmaps:/nix/var/nix/profiles/default/share/icons:/nix/var/nix/profiles/default/share/pixmaps:/run/current-system/sw/share/icons:/run/current-system/sw/share/pixmaps\n",
-      "NIX_PATH: nixpkgs=/nix/var/nix/profiles/per-user/root/channels/nixos:nixos-config=/etc/nixos/configuration.nix:/nix/var/nix/profiles/per-user/root/channels\n",
-      "VSCODE_CODE_CACHE_PATH: /home/yrrrrrf/.config/Code - Insiders/CachedData/2c749892adf66679e282a1b27ae526cf995d6f0c\n",
+      "NIX_PATH: nixpkgs=flake:nixpkgs:/nix/var/nix/profiles/per-user/root/channels\n",
+      "VSCODE_CODE_CACHE_PATH: /home/yrrrrrf/.config/Code/CachedData/0f0d87fa9e96c856c5212fc86db137ac0d783365\n",
       "INFOPATH: /home/yrrrrrf/.nix-profile/info:/home/yrrrrrf/.nix-profile/share/info:/nix/profile/info:/nix/profile/share/info:/home/yrrrrrf/.local/state/nix/profile/info:/home/yrrrrrf/.local/state/nix/profile/share/info:/etc/profiles/per-user/yrrrrrf/info:/etc/profiles/per-user/yrrrrrf/share/info:/nix/var/nix/profiles/default/info:/nix/var/nix/profiles/default/share/info:/run/current-system/sw/info:/run/current-system/sw/share/info\n",
       "GTK_PATH: /home/yrrrrrf/.nix-profile/lib/gtk-2.0:/home/yrrrrrf/.nix-profile/lib/gtk-3.0:/home/yrrrrrf/.nix-profile/lib/gtk-4.0:/nix/profile/lib/gtk-2.0:/nix/profile/lib/gtk-3.0:/nix/profile/lib/gtk-4.0:/home/yrrrrrf/.local/state/nix/profile/lib/gtk-2.0:/home/yrrrrrf/.local/state/nix/profile/lib/gtk-3.0:/home/yrrrrrf/.local/state/nix/profile/lib/gtk-4.0:/etc/profiles/per-user/yrrrrrf/lib/gtk-2.0:/etc/profiles/per-user/yrrrrrf/lib/gtk-3.0:/etc/profiles/per-user/yrrrrrf/lib/gtk-4.0:/nix/var/nix/profiles/default/lib/gtk-2.0:/nix/var/nix/profiles/default/lib/gtk-3.0:/nix/var/nix/profiles/default/lib/gtk-4.0:/run/current-system/sw/lib/gtk-2.0:/run/current-system/sw/lib/gtk-3.0:/run/current-system/sw/lib/gtk-4.0\n",
       "QTWEBKIT_PLUGIN_PATH: /home/yrrrrrf/.nix-profile/lib/mozilla/plugins/:/nix/profile/lib/mozilla/plugins/:/home/yrrrrrf/.local/state/nix/profile/lib/mozilla/plugins/:/etc/profiles/per-user/yrrrrrf/lib/mozilla/plugins/:/nix/var/nix/profiles/default/lib/mozilla/plugins/:/run/current-system/sw/lib/mozilla/plugins/\n",
-      "LD_LIBRARY_PATH: /nix/store/7sn7h422qps1y3f5b7490vn3yk18afky-libdbusmenu-glib-16.04.0/lib:/nix/store/kjy6rmnnz59pr2qcq1cal6f7xhq5r3r4-systemd-257.7-dev/lib:/nix/store/284df5f5mq01h1wmsz9grrqzraa3r9vi-pkg-config-wrapper-0.29.2/lib:/nix/store/d9fjwvp63xpfd9rw86lmcc2bhfky1ryc-alsa-lib-1.2.13/lib:/nix/store/v6frc7a2qy44rj398icysksynnbwxwf8-glib-2.84.3/lib:/nix/store/qbnwpvvwnxw73m0pbj20hkv9ypv3ncnq-libglvnd-1.7.0/lib:/nix/store/rx7src7js0g617rs6yi76vssm58dg67k-libxkbcommon-1.8.1/lib:/nix/store/hyxzbk63w6al5iw7mywhgbm53nk3x8yw-sdl2-compat-2.32.56/lib:/nix/store/5lwlj9mgc16zjs7r9lk4h2vpqjylc0jr-SDL2_gfx-1.0.4/lib:/nix/store/slpn8nb5q40lr2jzq175lyszfh2vnbqx-SDL2_image-2.8.8/lib:/nix/store/99xi2p0xzfj2f4j88qmk086va7vhlmb5-SDL2_mixer-2.8.1/lib:/nix/store/r0fa63cr2hac6pd1czrg0pbs2c7wlhpy-SDL2_ttf-2.24.0/lib:/nix/store/r9fbwnccm8gahy0h3b6g8n8k755k1vlk-wayland-1.23.1/lib:/nix/store/rbmbqk2865y79ncrngf575a72dpjf8dy-libX11-1.8.12/lib:/nix/store/10mjznxpmsjskgvfcdq5nrc9m97fas11-libXcursor-1.2.3/lib:/nix/store/bia2jm6jyalmmbw4kjljqvqydjnm929c-libXi-1.8.2/lib:/nix/store/ykabdv433705wa5h9niqwp3z2w9z0ib2-libXinerama-1.1.5/lib:/nix/store/hv3zdr3xrxlld11j5xkdlrdmcr5wn4n2-libXrandr-1.5.4/lib:/nix/store/hs37j1v4xhh4pn6dl6bvshc74bhan938-fontconfig-2.16.0-lib/lib:/nix/store/qv94wfmwj25z2i0sg7icq1zh3w3gdczv-freetype-2.13.3/lib:/nix/store/40djrmhgpd2vcbiikcmzrg5rjjv8igsp-qtbase-6.9.1/lib:/nix/store/nag6qscz6kd5fg61rxb39y2kik375msx-qtwayland-6.9.1/lib:/nix/store/4bkihvnmzbc44zspzlir5kkb0mzb6j8w-libjpeg-turbo-3.0.4/lib:/nix/store/gshwzbmpd5nj1k0k2wz1xck36z6ih1bm-libpng-apng-1.6.46/lib:/nix/store/k89rwqkg52wiwdkjdnii28hzkbkygmaq-giflib-5.2.2/lib\n",
+      "LD_LIBRARY_PATH: /nix/store/5j09pwqlw6xhsjklzx43c903ki3m8wab-libdbusmenu-glib-16.04.0/lib:/nix/store/az8d7l0d6qxj63mggb1w8ma37s1zyy7l-systemd-257.9-dev/lib:/nix/store/284df5f5mq01h1wmsz9grrqzraa3r9vi-pkg-config-wrapper-0.29.2/lib:/nix/store/l45smaks5jlwpz6sv9prwfwvx78p7ppq-alsa-lib-1.2.13/lib:/nix/store/svl12332fv5skndwxvsqw0w1i3xy4viv-glib-2.84.3/lib:/nix/store/45hwsgjwa6nxxb5rzz2kl68g3ikfprm6-libglvnd-1.7.0/lib:/nix/store/g9hb2v6j1swy77w77ird840dq20xn136-libxkbcommon-1.8.1/lib:/nix/store/bdnbmvvqsl7jw8kgnsgnf7scrxi42mis-sdl2-compat-2.32.56/lib:/nix/store/n3d54sa58sfjci9arf20hkaffn6hc8wq-SDL2_gfx-1.0.4/lib:/nix/store/bj9j254ml80xskmk3ngwbd45mr410y7r-SDL2_image-2.8.8/lib:/nix/store/4049l0apcv6kh7nzh78n8ahk4icd61f2-SDL2_mixer-2.8.1/lib:/nix/store/264gx9j467f9vnw8l4v9995a9clq4pb8-SDL2_ttf-2.24.0/lib:/nix/store/rkz0izd95qp2lm8nd5vzwzghd5p04gdd-wayland-1.23.1/lib:/nix/store/ayswhp8g569mhb0gbgxrvqw53hsq59mz-libX11-1.8.12/lib:/nix/store/ck4f1lhzmbbrpharmzxnqzw4vfbgzkr7-libxcb-1.17.0/lib:/nix/store/hkn7b9rdqky4m43mhk3pg1ind85yf8fv-libXcursor-1.2.3/lib:/nix/store/phpmbvcjd7sppnbfg07g5v9xyjna9nbi-libXi-1.8.2/lib:/nix/store/ksm28wdl5q73lrdmlvhvsr297lafcaj5-libXinerama-1.1.5/lib:/nix/store/gvg4ibdx82jfy1alrh21pki3waxnfd88-libXrandr-1.5.4/lib:/nix/store/7bjjr3xhgnncsnsygi13cxk43kmp54cg-fontconfig-2.16.0-lib/lib:/nix/store/l1g7r8sgrc3djn0x51mpy8fz5wp3204d-freetype-2.13.3/lib:/nix/store/4b0y2xmlmm7vwf7s2dh494mp5fl0wa2r-qtbase-6.9.2/lib:/nix/store/bgqk36593sdn062np6bi913wv9xq9dxr-qtwayland-6.9.2/lib:/nix/store/nkr0yygbdcs8i4s2y139xyrhnwqiim0f-libjpeg-turbo-3.0.4/lib:/nix/store/gshwzbmpd5nj1k0k2wz1xck36z6ih1bm-libpng-apng-1.6.46/lib:/nix/store/k89rwqkg52wiwdkjdnii28hzkbkygmaq-giflib-5.2.2/lib:/nix/store/5ip54pxvpiqq2qrkkwk1rd0a3vg7a3hn-cuda-merged-12.8/lib:/nix/store/dyy8948zw46ph4faw920g4yl6zhdli7g-cudnn-9.8.0.87-lib/lib:/nix/store/pm3zm3sbx180dj3jva40nal0z9ab3xvl-nvidia-x11-570.153.02-6.12.48/lib\n",
       "LIBEXEC_PATH: /home/yrrrrrf/.nix-profile/libexec:/nix/profile/libexec:/home/yrrrrrf/.local/state/nix/profile/libexec:/etc/profiles/per-user/yrrrrrf/libexec:/nix/var/nix/profiles/default/libexec:/run/current-system/sw/libexec\n",
-      "PATH: /home/yrrrrrf/lab/ai/.venv/bin:/nix/store/h55b1h2kr5pl68fhwp9b6qs3xfqj3hs6-glib-2.84.3-bin/bin:/home/yrrrrrf/.local/bin:/run/wrappers/bin:/home/yrrrrrf/.nix-profile/bin:/nix/profile/bin:/home/yrrrrrf/.local/state/nix/profile/bin:/etc/profiles/per-user/yrrrrrf/bin:/nix/var/nix/profiles/default/bin:/run/current-system/sw/bin:/nix/store/87zpmcmwvn48z4lbrfba74b312h22s6c-binutils-wrapper-2.44/bin:/nix/store/14gqnn5rwjv5a6b8vpkskb37kgv373jy-hyprland-qtutils-0.1.4/bin:/nix/store/kh6s3i1k5hmhimzinvb77gynm7z0cpjs-pciutils-3.13.0/bin:/nix/store/m53q460bmkxmnwk52jknjsw49kgc1y81-pkgconf-wrapper-2.4.3/bin\n",
-      "JUPYTER_PATH: /home/yrrrrrf/.config/Code - Insiders/User/globalStorage/ms-toolsai.jupyter/version-2025.7.0/jupyter\n",
+      "PATH: /home/yrrrrrf/docs/lab/ai/.venv/bin:/nix/store/irmkdc4kl59sdhg5smvh0yac8h4lxgk7-glib-2.84.3-bin/bin:/home/yrrrrrf/.local/bin:/run/wrappers/bin:/home/yrrrrrf/.nix-profile/bin:/nix/profile/bin:/home/yrrrrrf/.local/state/nix/profile/bin:/etc/profiles/per-user/yrrrrrf/bin:/nix/var/nix/profiles/default/bin:/run/current-system/sw/bin:/nix/store/87zpmcmwvn48z4lbrfba74b312h22s6c-binutils-wrapper-2.44/bin:/nix/store/qp2sm63vxrwhx2gb7w1v6sbwcb7licdd-hyprland-qtutils-0.1.4/bin:/nix/store/cz994zlb77rlfqhp8vps5hzv6v4830rx-pciutils-3.13.0/bin:/nix/store/m53q460bmkxmnwk52jknjsw49kgc1y81-pkgconf-wrapper-2.4.3/bin\n",
+      "JUPYTER_PATH: /home/yrrrrrf/.config/Code/User/globalStorage/ms-toolsai.jupyter/version-2025.8.0/jupyter\n",
       "CUDA_MODULE_LOADING: LAZY\n"
      ]
     },
@@ -575,7 +575,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/yrrrrrf/lab/ai/.venv/bin/python: No module named pip\n"
+      "/home/yrrrrrf/docs/lab/ai/.venv/bin/python: No module named pip\n"
      ]
     }
    ],
@@ -623,13 +623,13 @@
       "Testing PyTorch CPU performance...\n",
       "\n",
       "Matrix multiplication with size 1000x1000\n",
-      "Time taken: 0.0042 seconds\n",
+      "Time taken: 0.0136 seconds\n",
       "\n",
       "Matrix multiplication with size 2000x2000\n",
-      "Time taken: 0.0364 seconds\n",
+      "Time taken: 0.0499 seconds\n",
       "\n",
       "Matrix multiplication with size 4000x4000\n",
-      "Time taken: 0.2381 seconds\n"
+      "Time taken: 0.2180 seconds\n"
      ]
     }
    ],
@@ -691,7 +691,7 @@
       "================================================================================\n",
       "\n",
       "System:\n",
-      "  Operating System: Linux 6.12.42\n",
+      "  Operating System: Linux 6.12.48\n",
       "  Architecture: x86_64\n",
       "  Python: 3.12.11\n",
       "\n",
@@ -795,7 +795,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai",
+   "display_name": "ai (3.12.11)",
    "language": "python",
    "name": "python3"
   },
